@@ -1,3 +1,8 @@
+2006-06-07  Dai Sato  <satodai@w3m.jp>
+
+	* [w3m-dev 04129] handling newlines in form values 
+	* parsetagx.c: don't delete newlines in hidden values.
+
 2006-05-29  Dai Sato  <satodai@w3m.jp>
 
 	* [w3m-dev-en 01067] Some more patches
@@ -8728,4 +8733,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.964 2006/05/29 12:54:26 inu Exp $
+$Id: ChangeLog,v 1.965 2006/06/07 03:52:03 inu Exp $
